Configurando o Dapper e criando Listagem de Dados

--- a/ui/appsettings.json
+++ b/ui/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Default": "Server=localhost\\SQLEXPRESS; Database=DapperDB_Estacionamento; Integrated Security=True; trustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
